# OpenAI-TTS-CPP

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ChatStructures.hpp  NetworkingCPP.cpp  NetworkingCPP.h  NetworkingCPP.sln  NetworkingCPP.vcxproj  NetworkingCPP.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  assemblyai.h  cmake_install.cmake  file_player.hpp  live_player.hpp  openai-reduced.hpp  output.opus  output1.opus  response.opus  tts.py  vcpkg.json  ÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝÝ
NetworkingCPP.dir/Debug/: NetworkingCPP.exe.recipe  vc143.idb
NetworkingCPP.dir/Debug/NetworkingCPP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
NetworkingCPP.dir/Release/: NetworkingCPP.exe.recipe
NetworkingCPP.dir/Release/NetworkingCPP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
audio/: live.opus
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  ZERO_CHECK.lastbuildstate
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
